update on breakpoints and container component

--- a/src/scss/mixins/_breakpoints.scss
+++ b/src/scss/mixins/_breakpoints.scss
@@ -1,16 +1,29 @@
 @use "sass:map";
 
+// Minimum breakpoint width. Null for the smallest (first) breakpoint.
+// >> breakpoint-min(sm, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
+// 576px
+
 @function breakpoint-min($name, $breakpoints: $breakpoints-map) {
   $min: map.get($breakpoints, $name);
 
   @return if($min != 0, $min, null);
 }
 
+// Maximum breakpoint width.
+// The maximum value is reduced by 0.02px to work around the limitations of
+// `min-` and `max-` prefixes and viewports with fractional widths.
+// >> breakpoint-max(md, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
+// 767.98px
+
 @function breakpoint-max($name, $breakpoints: $breakpoints-map) {
   $max: map.get($breakpoints, $name);
 
   @return if($max and $max > 0, $max - 0.02, null);
 }
+
+// Media of at least the minimum breakpoint width. No query for the smallest breakpoint.
+// Makes the @content apply to the given breakpoint and wider.
 
 @mixin media-breakpoint-up($name, $breakpoints: $breakpoints-map) {
   $min: breakpoint-min($name, $breakpoints);
@@ -24,6 +37,20 @@
   }
 }
 
+// Returns a blank string if smallest breakpoint, otherwise returns the name with a
+// dash in front. Useful for making responsive utilities.
+// >> breakpoint-infix(xs, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
+// ""  (Returns a blank string)
+// >> breakpoint-infix(sm, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px))
+// "-sm"
+
+@function breakpoint-infix($name, $breakpoints: $breakpoints-map) {
+  @return if(breakpoint-min($name, $breakpoints) == null, "", "-#{$name}");
+}
+
+// Media of at most the maximum breakpoint width. No query for the largest breakpoint.
+// Makes the @content apply to the given breakpoint and narrower.
+
 @mixin media-breakpoint-down($name, $breakpoints: $breakpoints-map) {
   $max: breakpoint-max($name, $breakpoints);
 
@@ -35,6 +62,9 @@
     @content;
   }
 }
+
+// Media that spans multiple breakpoint widths.
+// Makes the @content apply between the min and max breakpoints
 
 @mixin media-breakpoint-between(
   $lower,
@@ -58,6 +88,10 @@
     }
   }
 }
+
+// Media between the breakpoint's minimum and maximum widths.
+// No minimum for the smallest breakpoint, and no maximum for the largest one.
+// Makes the @content apply only to the given breakpoint, not viewports any wider or narrower.
 
 @mixin media-breakpoint-only($name, $breakpoints: $breakpoints-map) {
   $min: breakpoint-min($name, $breakpoints);
