--- a/src/scss/variables/index.scss
+++ b/src/scss/variables/index.scss
@@ -1,7 +1,8 @@
 @import "animation";
-@import "border";
+@import "borders";
 @import "breakpoints";
 @import "brightness";
+@import "containers";
 @import "colors";
 @import "sizing";
 @import "spacing";
