--- a/src/scss/components/container/_base.scss
+++ b/src/scss/components/container/_base.scss
@@ -1,8 +1,38 @@
 .container,
 .container-fluid {
+  box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
-  padding-left: var(--gutter-x);
-  padding-right: var(--gutter-x);
+  padding-left: var(--space-base);
+  padding-right: var(--space-base);
   width: 100%;
+}
+
+// Responsive containers that are 100% wide until a breakpoint
+@each $breakpoint, $container-max-width in $container-max-widths-map {
+  .container-#{$breakpoint} {
+    @extend %container-fluid !optional;
+  }
+
+  @include media-breakpoint-up($breakpoint, $breakpoints-map) {
+    %responsive-container-#{$breakpoint} {
+      max-width: $container-max-width;
+    }
+
+    // Extend each breakpoint which is smaller or equal to the current breakpoint
+    $extend-breakpoint: true;
+
+    @each $name, $width in $breakpoints-map {
+      @if $extend-breakpoint {
+        .container#{breakpoint-infix($name, $breakpoints-map)} {
+          @extend %responsive-container-#{$breakpoint};
+        }
+
+        // Once the current breakpoint is reached, stop extending
+        @if $breakpoint == $name {
+          $extend-breakpoint: false;
+        }
+      }
+    }
+  }
 }
