--- a/src/scss/root/index.scss
+++ b/src/scss/root/index.scss
@@ -3,6 +3,7 @@
 @import "breakpoints";
 @import "brightness";
 @import "colors";
+@import "grid";
 @import "sizing";
 @import "spacing";
 @import "typography";
