--- a/src/scss/variables/index.scss
+++ b/src/scss/variables/index.scss
@@ -4,6 +4,7 @@
 @import "brightness";
 @import "containers";
 @import "colors";
+@import "grid";
 @import "sizing";
 @import "spacing";
 @import "typography";
