--- a/src/scss/components/row/_base.scss
+++ b/src/scss/components/row/_base.scss
@@ -3,10 +3,13 @@
   display: flex;
   flex-wrap: wrap;
 
-  > * {
+  > *,
+  > .col {
     box-sizing: border-box;
     flex-shrink: 0;
     max-width: 100%;
     width: 100%;
   }
 }
+
+@include make-row-cols-mixin;
