--- a/src/scss/components/layout/_base.scss
+++ b/src/scss/components/layout/_base.scss
@@ -1,5 +1,22 @@
 .layout {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   min-height: 0;
+}
+
+// Color
+
+@each $color in $layout-colors {
+  .layout-color-#{$color} {
+    @include component-color-mixin($color);
+  }
+}
+
+// Patern
+
+@each $pattern in $layout-patterns {
+  .layout-pattern-#{$pattern} {
+    @include layout-pattern-mixin($pattern);
+  }
 }
