--- a/src/scss/root/_colors.scss
+++ b/src/scss/root/_colors.scss
@@ -1,15 +1,6 @@
 :root {
   /**
    *
-   * Generic
-   *
-   */
-
-  --color-white: #{$color-white};
-  --color-black: #{$color-black};
-
-  /**
-   *
    * Background
    *
    */
@@ -157,6 +148,17 @@
   --color-error-subtle-s: #{color-saturation-from-hex($color-error-subtle)};
   --color-error-subtle-l: #{color-lightness-from-hex($color-error-subtle)};
 
+  /**
+   *
+   * Theme (Light & Dark)
+   *
+   */
+
+  /* White */
+
+  --color-white: #{$color-white};
+  --color-white-yiq: #{$color-white-yiq};
+
   /* Light */
 
   --color-light: #{$color-light};
@@ -172,6 +174,11 @@
   --color-light-subtle-h: #{color-hue-from-hex($color-light-subtle)};
   --color-light-subtle-s: #{color-saturation-from-hex($color-light-subtle)};
   --color-light-subtle-l: #{color-lightness-from-hex($color-light-subtle)};
+
+  /* Black */
+
+  --color-black: #{$color-black};
+  --color-black-yiq: #{$color-black-yiq};
 
   /* Dark */
 
