--- a/src/scss/components/alert/_base.scss
+++ b/src/scss/components/alert/_base.scss
@@ -5,7 +5,7 @@
   border-style: solid;
   border-width: $alert-border-width;
   box-sizing: border-box;
-  display: inline-flex;
+  display: flex;
 }
 
 .alert-close {
