--- a/src/scss/components/badge/_mixins.scss
+++ b/src/scss/components/badge/_mixins.scss
@@ -6,6 +6,14 @@
   @if $pattern == "subtle" {
     @include badge-subtle-mixin;
   }
+
+  @if $pattern == "colored" {
+    @include badge-colored-mixin;
+  }
+
+  @if $pattern == "outline" {
+    @include badge-outline-mixin;
+  }
 }
 
 @mixin badge-solid-mixin {
@@ -14,4 +22,12 @@
 
 @mixin badge-subtle-mixin {
   @include component-subtle-mixin;
+}
+
+@mixin badge-colored-mixin {
+  @include component-colored-mixin;
+}
+
+@mixin badge-outline-mixin {
+  @include component-outline-mixin;
 }
