--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -6,8 +6,10 @@
 @import "avatar";
 @import "badge";
 @import "button";
+@import "card";
 @import "close";
 @import "dot";
+@import "figure";
 @import "icon";
 @import "menu";
 
@@ -23,10 +25,15 @@
 
 @import "layout";
 @import "header";
+@import "sider";
 @import "content";
 @import "footer";
+
+// Layout - Utils
+
 @import "divider";
 @import "space";
+@import "scroller";
 
 // Grid
 
