--- a/src/scss/components/space/_variables.scss
+++ b/src/scss/components/space/_variables.scss
@@ -1,14 +1,14 @@
-$space-sizes: (
+$space-gaps: (
+  "1": (
+    "gap": "1"
+  ),
+  "2": (
+    "gap": "2"
+  ),
+  "3": (
+    "gap": "3"
+  ),
   "4": (
     "gap": "4"
-  ),
-  "8": (
-    "gap": "8"
-  ),
-  "12": (
-    "gap": "12"
-  ),
-  "16": (
-    "gap": "16"
   )
 ) !default;
