--- a/src/scss/root/_brightness.scss
+++ b/src/scss/root/_brightness.scss
@@ -1,4 +1,7 @@
 :root {
+  --brightness-0: #{$brightness-0};
+  --brightness-1: #{$brightness-1};
+  --brightness-2: #{$brightness-2};
   --brightness-4: #{$brightness-4};
   --brightness-8: #{$brightness-8};
   --brightness-16: #{$brightness-16};
