--- a/src/scss/variables/_brightness.scss
+++ b/src/scss/variables/_brightness.scss
@@ -1,6 +1,11 @@
+$brightness-0: 0% !default;
+$brightness-1: 1% !default;
+$brightness-2: 2% !default;
 $brightness-4: 4% !default;
 $brightness-8: 8% !default;
 $brightness-16: 16% !default;
 $brightness-24: 24% !default;
 $brightness-32: 32% !default;
+$brightness-40: 40% !default;
+$brightness-48: 48% !default;
 $component-brightness-base: $brightness-8 !default;
