--- a/src/scss/components/badge/_variables.scss
+++ b/src/scss/components/badge/_variables.scss
@@ -1,16 +1,16 @@
 $badge-border-width: var(--component-border-width-base) !default;
+$badge-patterns: ("solid", "subtle", "colored", "outline") !default;
 $badge-placements: (
   "top-left", "top-right", "bottom-left", "bottom-right"
 ) !default;
 $badge-sizes: (
   "xs": (
-    "font-size": "xxs", "gap": "4", "height": "16", "min-width": "16", "padding-x": "4"
+    "font-size": "xxs", "gap": "1", "height": "4", "min-width": "4", "padding-x": "1"
   ),
   "sm": (
-    "font-size": "xs",  "gap": "8", "height": "24", "min-width": "24", "padding-x": "8"
+    "font-size": "xs",  "gap": "2", "height": "6", "min-width": "6", "padding-x": "2"
   ),
   "base": (
-    "font-size": "sm",  "gap": "8", "height": "32", "min-width": "32", "padding-x": "12"
+    "font-size": "sm",  "gap": "2", "height": "8", "min-width": "8", "padding-x": "3"
   )
 ) !default;
-$badge-patterns: ("solid", "subtle") !default;
