--- a/src/scss/components/footer/_base.scss
+++ b/src/scss/components/footer/_base.scss
@@ -26,9 +26,12 @@
 
 @each $size, $props in $footer-sizes {
   .footer-size-#{$size} {
+    $font-size: map.get($props, "font-size");
     $padding-x: map.get($props, "padding-x");
     $padding-y: map.get($props, "padding-y");
 
+    @include map-props-mixin(
+      map.get($component-font-sizing, $font-size));
     @include map-props-mixin(
       map.get($component-padding-x-sizing, $padding-x));
     @include map-props-mixin(
