--- a/src/scss/components/icon/_variables.scss
+++ b/src/scss/components/icon/_variables.scss
@@ -1,26 +1,27 @@
+$icon-patterns: ("solid") !default;
 $icon-sizes: (
   "12": (
-    "size": "12"
+    "size": "3"
   ),
   "16": (
-    "size": "16"
+    "size": "4"
   ),
   "20": (
-    "size": "20"
+    "size": "5"
   ),
   "24": (
-    "size": "24"
+    "size": "6"
   ),
   "32": (
-    "size": "32"
+    "size": "8"
   ),
   "40": (
-    "size": "40"
+    "size": "10"
   ),
   "64": (
-    "size": "64"
+    "size": "12"
   ),
   "80": (
-    "size": "80"
+    "size": "14"
   )
 ) !default;
