--- a/src/scss/components/layout/_base.scss
+++ b/src/scss/components/layout/_base.scss
@@ -2,7 +2,12 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  flex: 1 1 auto;
   min-height: 0;
+}
+
+.layout-has-sider {
+  flex-direction: row;
 }
 
 // Color
