--- a/src/scss/components/row/_base.scss
+++ b/src/scss/components/row/_base.scss
@@ -1,14 +1,19 @@
+@use "sass:map";
+
 .row {
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
+  @include make-row-mixin;
 
   > *,
   > .col {
-    box-sizing: border-box;
-    flex-shrink: 0;
-    max-width: 100%;
-    width: 100%;
+    @include make-row-col-mixin;
+  }
+}
+
+@each $name, $props in $row-gaps {
+  $gap: map.get($props, "gap");
+
+  .row-gap-#{$name} {
+    @include map-props-mixin(map.get($component-gap-sizing, $gap));
   }
 }
 
