--- a/src/scss/components/row/_mixins.scss
+++ b/src/scss/components/row/_mixins.scss
@@ -1,11 +1,26 @@
 @use "sass:math";
 
+@mixin make-row-mixin() {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  width: 100%;
+}
+
 @mixin row-cols-mixin($count) {
   > *,
   > .col {
-    flex: 0 0 auto;
+    // flex: 0 0 auto;
     width: math.div(100%, $count);
   }
+}
+
+@mixin make-row-col-mixin() {
+  box-sizing: border-box;
+  flex-shrink: 0;
+  max-width: 100%;
+  width: 100%;
 }
 
 @mixin make-row-cols-mixin(
