--- a/src/scss/root/_typography.scss
+++ b/src/scss/root/_typography.scss
@@ -1,6 +1,7 @@
 :root {
   /* Font Family */
 
+  --font-family-sans: #{$font-family-sans};
   --font-family-body: #{$font-family-body};
   --font-family-headline: #{$font-family-headline};
   --font-family-subtitle: #{$font-family-subtitle};
