--- a/src/scss/variables/_components.scss
+++ b/src/scss/variables/_components.scss
@@ -11,8 +11,9 @@ $component-colors: (
   "warning",
   "error",
   "light",
-  "lighter",
-  "dark"
+  "dark",
+  "white",
+  "black"
 ) !default;
 
 /* Placements */
@@ -49,6 +50,7 @@ $component-shapes: (
  */
 
 $component-height-sizing: ();
+$component-min-height-sizing: ();
 $component-max-width-sizing: ();
 $component-min-width-sizing: ();
 $component-size-sizing: ();
@@ -59,6 +61,12 @@ $component-width-sizing: ();
     $component-height-sizing,
     (
       "#{$name}": ("height": $value)
+    )
+  );
+  $component-min-height-sizing: map.merge(
+    $component-min-height-sizing,
+    (
+      "#{$name}": ("min-height": $value)
     )
   );
   $component-max-width-sizing: map.merge(
@@ -100,6 +108,7 @@ $component-margin-y-sizing: ();
 $component-padding-sizing: ();
 $component-padding-x-sizing: ();
 $component-padding-y-sizing: ();
+$component-padding-top-sizing: ();
 $component-padding-left-sizing: ();
 $component-padding-right-sizing: ();
 
@@ -146,6 +155,12 @@ $component-padding-right-sizing: ();
       "#{$name}": ("padding-top": $value, "padding-bottom": $value)
     )
   );
+  $component-padding-top-sizing: map.merge(
+    $component-padding-top-sizing,
+    (
+      "#{$name}": ("padding-top": $value)
+    )
+  );
   $component-padding-left-sizing: map.merge(
     $component-padding-left-sizing,
     (
@@ -159,15 +174,6 @@ $component-padding-right-sizing: ();
     )
   );
 }
-
-/* Types */
-
-$component-types: (
-  "solid",
-  "subtle",
-  "outline",
-  "ghost"
-) !default;
 
 /* Typography */
 
